# metronome

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
dependencies/: catch.hpp  dynamic_priority_queue.hpp  httplib.h
modules/: FindCairo.cmake
resources/configuration/: grid.json  test.json  tiles.json  urban.json  vehicle.json  vehicle2.json  vehicle3.json  vehicle4.json
resources/input/acrobot/: default_0.07-0.07.ab  default_0.1-0.1.ab  default_0.3-0.3.ab
resources/input/dynamicgrid/: squares25.dyngrid
resources/input/graph/: case1.graph  sample.graph
resources/input/isolation/: i1
resources/input/pointrobot/: big-squiggle.pr  bigmaze.pr  cups.pr  empty.pr  h_100.pr  h_200.pr  h_400.pr  h_50.pr  hole_400.pr  mid-squiggle.pr  obstacles-1.pr  openBox_25.pr  openBox_400.pr  openBox_800.pr  slalom.pr  slalom_03.pr  slalom_04.pr  smallmaze.pr  smallmaze2.pr  squiggle.pr  squiggle_800.pr  uniform.pr  wall.pr
resources/input/pointrobot/dylan/: cups.pr  slalom.pr  uniform.pr  wall.pr
resources/input/racetrack/: barto-big.track  barto-small.track  bigger-track.track  hansen-bigger.track  long.track
resources/input/vacuum/: angle_1600.vw  angle_800.vw  big-squiggle.vw  cups.vw  empty.vw  h_400.vw  hole_400.vw  larges.vw  long10k.vw  maze.vw  openBox_25.vw  openBox_400.vw  openBox_800.vw  random1k.vw  randomNoisy1k.vw  randomShapes1k.vw  shalom.vw  slalom.vw  slalom_02.vw  slalom_03.vw  slalom_04.vw  smallwall.vw  squiggle.vw  squiggle_800.vw  swall.vw  swall2.vw  toy1.vw  toy2.vw  toy3.vw  uniform.vw  wall.vw
resources/input/vacuum/bence/: case3.vw  decision.vw  decision2.vw  decisions.vw  highway.vw  highway1.vw  hw2.vw  hw3.vw  hw4.vw  hw_proto.vw  jeremy.vw
resources/input/vacuum/dylan/: cups.vw  slalom.vw  uniform.vw  wall.vw
resources/input/vacuum/minima1500/: minima1500_1500-0.vw  minima1500_1500-1.vw  minima1500_1500-10.vw  minima1500_1500-11.vw  minima1500_1500-12.vw  minima1500_1500-13.vw  minima1500_1500-14.vw  minima1500_1500-15.vw  minima1500_1500-16.vw  minima1500_1500-17.vw  minima1500_1500-18.vw  minima1500_1500-19.vw  minima1500_1500-2.vw  minima1500_1500-20.vw  minima1500_1500-21.vw  minima1500_1500-22.vw  minima1500_1500-23.vw  minima1500_1500-24.vw  minima1500_1500-25.vw  minima1500_1500-26.vw  minima1500_1500-27.vw  minima1500_1500-28.vw  minima1500_1500-29.vw  minima1500_1500-3.vw  minima1500_1500-30.vw  minima1500_1500-31.vw  minima1500_1500-32.vw  minima1500_1500-33.vw  minima1500_1500-34.vw  minima1500_1500-35.vw  minima1500_1500-36.vw  minima1500_1500-37.vw  minima1500_1500-38.vw  minima1500_1500-39.vw  minima1500_1500-4.vw  minima1500_1500-40.vw  minima1500_1500-41.vw  minima1500_1500-42.vw  minima1500_1500-43.vw  minima1500_1500-44.vw  (+44 more)
resources/input/vacuum/minima3k_300/: minima3000_300-0.vw  minima3000_300-1.vw  minima3000_300-10.vw  minima3000_300-11.vw  (+80 more)
resources/input/vehicle/: vehicle.v  vehicle0.v  vehicle1.v  vehicle10.v  vehicle11.v  vehicle12.v  vehicle13.v  vehicle14.v  vehicle15.v  vehicle16.v  vehicle17.v  vehicle18.v  vehicle19.v  vehicle2.v  vehicle20.v  vehicle21.v  vehicle22.v  vehicle23.v  vehicle24.v  vehicle25.v  vehicle26.v  vehicle27.v  vehicle28.v  vehicle29.v  vehicle3.v  vehicle30.v  vehicle31.v  vehicle32.v  vehicle33.v  vehicle34.v  vehicle35.v  vehicle36.v  vehicle37.v  vehicle38.v  vehicle39.v  vehicle4.v  vehicle40.v  vehicle41.v  vehicle42.v  vehicle43.v  (+61 more)
scripts/: Metronome.py  MortsEvaluationPlots.ipynb  dist_plot.ipynb  generate-vehicle-domains.py  merge_results.py  metronome_plot.py  metronome_progression_plot.py  metronome_stp_plot.py  metronome_urban_plot.py  metronome_visualizer.py  mongo_client.py  progress_plot.py  randomize-grid.py  slack_notification.py  summary.py
scripts/evaluator/: grid_difficulty_evaluator.py
scripts/generator/: generate_grid_world.py  generate_race_track.py  highway_generator.py
scripts/logs/: hat_10_1  hat_10_2  hat_10_3  hat_10_4  lss_10_1  lss_10_2
scripts/rts_scripts/: gridGenerator.py  matplotlibrc  plotutils.py  rtsMongoClient.py
scripts/visualizer/: race_game.py  test.track
src/: MemoryConfiguration.hpp  Metronome.cpp  MetronomeException.hpp  main.cpp
src/algorithm/: AStar.hpp  LssLrtaStar.hpp  Planner.hpp
src/algorithms/: AStar.hpp  ClusterRts.hpp  FHat.hpp  FRts.hpp  LssLrtaStar.hpp  MoRts.hpp  MoRtsOld.hpp  OfflinePlanner.hpp  OnlinePlanner.hpp  Planner.hpp  SLssLrtaStar.hpp  SZero.hpp  SafeRTS.hpp  SlowRts.hpp  SuboptimalAStar.hpp  TBAStar.hpp  TimeBoundedAStar.hpp  UrbanAStar.hpp
src/algorithms/planner_tools/: Comparators.hpp  Nodes.hpp
src/domains/: Domain.hpp  DynamicGridWorld.hpp  Graph.hpp  GridWorld.hpp  OrientationGrid.hpp  RaceTrack.hpp  RaceTrackLimit.hpp  SlidingTilePuzzle.hpp  SuccessorBundle.hpp  TestDomain.hpp  Traffic.hpp  UrbanDriving.hpp  VacuumWorld.hpp  VacuumWorldIO.hpp  Vehicle.hpp
src/experiment/: Configuration.hpp  ConfigurationExecutor.hpp  Experiment.hpp  OfflineExperiment.hpp  OfflinePlanManager.hpp  PlanManager.hpp  RealTimeExperiment.hpp  RealTimePlanManager.hpp  Result.hpp
src/experiment/termination/: ExpansionTerminationChecker.hpp  TimeTerminationChecker.hpp
src/util/: Hasher.hpp  PriorityQueue.hpp  TimeMeasurement.hpp  VacuumWorld.hpp  VacuumWorldIO.hpp
src/utils/: BucketPriorityQueue.hpp  File.hpp  Hash.hpp  Location2D.hpp  ObjectPool.hpp  PointTuple.hpp  PriorityQueue.hpp  StaticVector.hpp  Statistic.hpp  String.hpp  TimeMeasurement.hpp  Visualizer.hpp  statistic.hpp
src/visualization/: Visualizer.hpp
test/: test.cpp
test/algorithm/: AStarTest.cpp  AStarTest.hpp  LssLrtaStarTest.hpp
test/algorithms/: AStarTest.hpp  LssLrtaStarTest.hpp
test/domains/: DynamicGridWorldTest.hpp  GridWorldTest.hpp  SlidingTilePuzzleTest.hpp  TrafficTest.hpp  UrbanDrivingTest.hpp  VacuumWorldTest.cpp  VacuumWorldTest.hpp  VehicleTest.hpp
test/domains/instances/: GridInstance.hpp
test/experiment/: TimeTerminationCheckerTest.hpp
test/util/: PriorityQueueTest.cpp  PriorityQueueTest.hpp  VacuumWorldTest.hpp
test/utils/: ObjectPoolTest.hpp  PriorityQueueTest.hpp
(+520 files in other folders)
